; ModuleID = '/home/carl/AnghaBench/citus/src/backend/distributed/commands/extr_variableset.c_IsSettingSafeToPropagate.c'
source_filename = "/home/carl/AnghaBench/citus/src/backend/distributed/commands/extr_variableset.c_IsSettingSafeToPropagate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [29 x i8] c"citus.propagate_set_commands\00", align 1
@.str.1 = private unnamed_addr constant [16 x i8] c"client_encoding\00", align 1
@.str.2 = private unnamed_addr constant [14 x i8] c"exit_on_error\00", align 1
@.str.3 = private unnamed_addr constant [16 x i8] c"max_stack_depth\00", align 1
@__const.IsSettingSafeToPropagate.skipSettings = private unnamed_addr constant [4 x i8*] [i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str, i32 0, i32 0), i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.1, i32 0, i32 0), i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.2, i32 0, i32 0), i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.3, i32 0, i32 0)], align 16
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*)* @IsSettingSafeToPropagate to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @IsSettingSafeToPropagate(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = alloca [4 x i8*], align 16
  %5 = alloca i64, align 8
  store i8* %0, i8** %3, align 8
  %6 = bitcast [4 x i8*]* %4 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 16 %6, i8* align 16 bitcast ([4 x i8*]* @__const.IsSettingSafeToPropagate.skipSettings to i8*), i64 32, i1 false)
  store i64 0, i64* %5, align 8
  store i64 0, i64* %5, align 8
  br label %7

7:                                                ; preds = %21, %1
  %8 = load i64, i64* %5, align 8
  %9 = getelementptr inbounds [4 x i8*], [4 x i8*]* %4, i64 0, i64 0
  %10 = call i64 @lengthof(i8** %9)
  %11 = icmp ult i64 %8, %10
  br i1 %11, label %12, label %24

12:                                               ; preds = %7
  %13 = load i64, i64* %5, align 8
  %14 = getelementptr inbounds [4 x i8*], [4 x i8*]* %4, i64 0, i64 %13
  %15 = load i8*, i8** %14, align 8
  %16 = load i8*, i8** %3, align 8
  %17 = call i64 @pg_strcasecmp(i8* %15, i8* %16)
  %18 = icmp eq i64 %17, 0
  br i1 %18, label %19, label %20

19:                                               ; preds = %12
  store i32 0, i32* %2, align 4
  br label %25

20:                                               ; preds = %12
  br label %21

21:                                               ; preds = %20
  %22 = load i64, i64* %5, align 8
  %23 = add i64 %22, 1
  store i64 %23, i64* %5, align 8
  br label %7

24:                                               ; preds = %7
  store i32 1, i32* %2, align 4
  br label %25

25:                                               ; preds = %24, %19
  %26 = load i32, i32* %2, align 4
  ret i32 %26
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i64 @lengthof(i8**) #2

declare dso_local i64 @pg_strcasecmp(i8*, i8*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
